<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">

        <TableRow
            android:id="@+id/functionRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/functionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/functionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/startLocationRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/startLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_location"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/startLocationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/endLocationRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/endLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_location"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/endLocationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickedSubmit"
                android:text="@string/submit"
                android:textSize="18sp" />

            <Button
                android:id="@+id/functionCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickedCancel"
                android:text="@string/back" />
        </TableRow>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="18sp" />
    </TableLayout>
</ScrollView>
