<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_weight="1">
    <TableLayout
        android:id="@+id/placeDescriptionTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        tools:context=".PlaceDescriptionActivity">

        <TableRow
            android:id="@+id/nameRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/descriptionRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/description" />

            <EditText
                android:id="@+id/descriptionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/categoryRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/category" />

            <EditText
                android:id="@+id/categoryValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/category"
                android:inputType="textPersonName"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/addressTitleRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addressTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/addressTitle" />

            <EditText
                android:id="@+id/addressTitleValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addressTitle"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/addressStreetRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addressStreetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/addressStreet" />

            <EditText
                android:id="@+id/addressStreetValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addressStreet"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/elevationRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/elevationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/elevation" />

            <EditText
                android:id="@+id/elevationValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/elevation"
                android:inputType="numberDecimal"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/latitudeRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/latitudeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/latitude" />

            <EditText
                android:id="@+id/latitudeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/latitude"
                android:inputType="numberDecimal"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/longitudeRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/longitudeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/longitude" />

            <EditText
                android:id="@+id/longitudeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/longitude"
                android:inputType="numberDecimal"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/actionRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="clickedSave"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="clickedCancel"
                android:text="@string/cancel" />
        </TableRow>

    </TableLayout>
</ScrollView>